Fix video overlap issue

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -30,7 +30,7 @@ article {
 
 .side-content {
   align-content: end;
-  width: 500px;
+  width: 400px;
   grid-area: 1 / 2 / 2 / 3;
   justify-self: end;
 }
@@ -58,9 +58,10 @@ h3 {
 }
 
 iframe {
-  width: 150%;
-  height: 75%;
+  width: 100%;
+  height: 55%;
   border: 0;
+  margin-top: 15px;
 }
 
 .thumbs {
